# coding-workshop

SUSTech-project/: hello.py
c++ workshop/: project 4.rar
c++ workshop/lab exercise/: CMakeCache.txt  Makefile  a.out  aaa  cMakeLists.txt  cmake_install.cmake  exercise1  exercise1.cpp  main  main.cpp
c++ workshop/practice/: A  A.cpp  a.out  code  code.cpp  code2.cpp  code3  code3.cpp  template.cpp
c++ workshop/project 1/: report.docx  source.cpp
c++ workshop/project 2/: CMakeCache.txt  CMakeLists.txt  Makefile  calculator  cmake_install.cmake  report.docx
c++ workshop/project 2/include/: BigNum.hpp  BigNumFunctions.hpp  calculateExpertSystem.hpp  head.hpp  helps.hpp  stringFunctions.hpp
c++ workshop/project 2/src/: BigNumFunctions.cpp  helps.cpp  main.cpp  stringFunctions.cpp
c++ workshop/project 3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  report.docx  report.md
c++ workshop/project 3/include/: Matrix.h  head.h
c++ workshop/project 3/src/: Matrix.c  main.c
c++ workshop/project 4/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  report.docx
c++ workshop/project 4/include/: Matrix.h  head.h
c++ workshop/project 4/src/: Matrix.c  main.c
c++ workshop/project 5/: CMakeCache.txt  Makefile  cmake_install.cmake  main  report.docx  ~$report.docx
c++ workshop/project 5/include/: Matrix.hpp  head.hpp
java workshop/: movies.txt
java workshop/project workshop/: project presentation.ppt
java workshop/src/: Client.java  DatabaseManipulation.java
python workshop/: hello.py
(+67 files in other folders)
